OpenApi for followers request
