# core/presentation/src/main/kotlin/com/yappeer/presentation/routes/feature/profile/FollowersRoute.kt
@@ -14,12 +14,12 @@ import org.koin.ktor.ext.inject
 import org.slf4j.LoggerFactory
 import java.util.UUID
 
-internal const val FollowersUsersRoute = "/followers_users"
+internal const val FollowersRoute = "/followers"
 
-suspend fun Route.followersUsersRoute(call: RoutingCall) {
+suspend fun Route.followersRoute(call: RoutingCall) {
     val repository: SubscriptionsRepository by inject()
 
-    val logger = LoggerFactory.getLogger(FollowersUsersRoute)
+    val logger = LoggerFactory.getLogger(FollowersRoute)
     val request = call.receive<UserSubscriptionsParams>()
 
     try {
